# tuit

./: Cargo.toml  README.md  bacon.toml  flake.nix  shell.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link
changelogs/: 0.1.0.md  0.2.0.md  0.2.1-shelves.md  0.3.0-a1.md  0.3.1.md
examples/: bad_benchmark.rs  buttons.rs  centered.rs  checkbox.rs  prompt.rs  rescale.rs  shelves.rs  split.rs  stacking.rs  text.rs  view.rs
src/: default_impls.rs  draw.rs  errors.rs  lib.rs  style.rs  terminal.rs  widgets.rs
src/allocations/: mod.rs  widgets.rs
src/allocations/terminal/: constant_boxed.rs  mod.rs
src/allocations/terminal/extras/: mod.rs  rescale.rs  resize.rs
src/std/: errors.rs  mod.rs
src/std/ansi_terminal/: mod.rs
src/std/stdout_render/: mod.rs
src/std/stdout_terminal/: mod.rs
src/terminal/: anstyle.rs  const_size.rs  const_size_ref.rs  debug.rs  default_impls.rs  dummy.rs  extended.rs  interactive.rs  max_size.rs  mod.rs  owo_colors.rs  view.rs  view_iterator.rs  view_split.rs
src/terminal/extended/: mod.rs  view.rs  view_iterator.rs  view_mut.rs
src/widgets/: mod.rs
src/widgets/builtins/: backdrop.rs  buttons.rs  centered.rs  centered_prompt.rs  centered_text.rs  checkbox.rs  dummy.rs  margin.rs  mod.rs  padding.rs  ruler.rs  shelved.rs  shrink_wrap.rs  stacked.rs  sweeper.rs  text.rs  uv.rs
