[package]
name = "tuit"
version = "0.0.1"
edition = "2021"
description = "A no_std, no_alloc TUI library"
categories = ["no-std::no-alloc", "command-line-interface"]
keywords = ["no_std", "tui"]
documentation = "https://docs.rs/crate/tuit"
readme = "README.md"
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "^1.0.38", package = "thiserror-core" }
anyhow = "^1.0.86"
owo-colors = { version = "^4.0.0", optional = true }

[features]
default = ["widgets"]
std = ["alloc"]
alloc = []
widgets = []
ansi_terminal = ["std", "owo_colors"]
owo_colors = ["dep:owo-colors"]

[package.metadata.docs.rs]
all-features = true # Otherwise, it would not compile every feature -- causing some docs to be missing.

[lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny" # Unsafe is forbidden in the library anyway, but it might not be in the future.
suspicious_doc_comments = "warn"
todo = "warn"
perf = "warn"

missing_errors_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_features = "deny"

[lints.rustdoc]
missing_doc_code_examples = "warn"
broken_intra_doc_links = "warn"