[package]
name = "tuit"
version = "0.1.0"
edition = "2021"
description = "A no_std, no_alloc TUI library"
categories = ["no-std::no-alloc", "command-line-interface"]
keywords = ["no_std", "tui"]
documentation = "https://docs.rs/crate/tuit"
readme = "README.md"
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "^1.0.38", package = "thiserror-core" }
anyhow = "^1.0.86"
owo-colors = { version = "^4.0.0", optional = true }

[features]
default = ["builtin_widgets"]
std = ["alloc"]
alloc = []
builtin_widgets = []
ansi_terminal = ["std", "owo_colors"]
owo_colors = ["dep:owo-colors"]

[package.metadata.docs.rs]
all-features = true # Otherwise, it would not compile every feature -- causing some docs to be missing.

[lints.clippy]
pedantic = "deny"
nursery = "deny"
perf = "warn"

undocumented_unsafe_blocks = { level = "deny", priority = 1 } # Unsafe is forbidden in the library anyway, but it might not be in the future.

unwrap_used = { level = "warn", priority = 1 }
suspicious_doc_comments = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }

missing_errors_doc = { level = "warn", priority = 1 }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_features = "deny"

[lints.rustdoc]
missing_doc_code_examples = "warn"
broken_intra_doc_links = "deny"